# pcgl-data-mapper

./: .gitignore  README.md  prototype_mapper.py  pyproject.toml  requirements.txt
core/: README.md  __init__.py
core/mappers/: __init__.py  base.py  record_transforms.py  utils.py
data/mapped/EXAMPLE/: comorbidity.csv  demographic.csv  diagnosis.csv  measurement.csv  medication.csv  participant.csv  sample.csv  sociodemographic.csv  specimen.csv  treatment.csv
data/source/: EXAMPLE.csv  _DUMMY_EXAMPLE.csv
data/source/HostSeq/: HostSeqHarmonizedAllVariablesDummy.csv  specimen_tissue_source.tsv
data/source/HostSeq/input/: HostSeqCRFHarmonized-PCGLTrans_DATA_2026-03-02_1241.csv  HostseqSalivaSamples.csv
scripts/: submit_clinical.py
studies/: README.md
studies/EXAMPLE/config/: comorbidity.yaml  demographic.yaml  diagnosis.yaml  measurement.yaml  medication.yaml  participant.yaml  sample.yaml  sociodemographic.yaml  specimen.yaml  treatment.yaml
studies/HostSeq/config/: comorbidity.yaml  demographic.yaml  diagnosis.yaml  exposure.yaml  hla.yaml  household.yaml  measurement.yaml  medication.yaml  participant.yaml  phenotype.yaml  procedure.yaml  sample.yaml  sociodemographic.yaml  specimen.yaml  treatment.yaml
studies/_TEMPLATE/config/: comorbidity.yaml  demographic.yaml  diagnosis.yaml  exposure.yaml  measurement.yaml  medication.yaml  participant.yaml  phenotype.yaml  procedure.yaml  sample.yaml  sociodemographic.yaml  specimen.yaml  treatment.yaml
studies/_TEMPLATE/mappers/: __init__.py  base.py  transforms.py
tests/data/source/PR_12/: clinical.csv  (+2 more)
(+2 files in other folders)
