[project]
name = "pcgl-data-mapper"
version = "0.1.0"
description = "YAML-driven framework for mapping research data to PCGL data model"
requires-python = ">=3.9,<3.13"
dependencies = [
    "setuptools>=60.0",  # distutils shim for Python 3.12+ compatibility
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.0",
    "linkml-runtime>=1.5.0",
    "linkml>=1.5.0",
    "jsonschema>=4.17.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]
docs = [
    "sphinx>=5.3.0",
    "sphinx-rtd-theme>=1.2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]
